[gd_scene load_steps=8 format=3 uid="uid://b76vnt4rv4p0q"]

[ext_resource type="Script" uid="uid://dwkorb7tenxfs" path="res://addons/ridiculous_coding/dock.gd" id="1_bwupq"]
[ext_resource type="Texture2D" uid="uid://dgda8elabipl5" path="res://addons/ridiculous_coding/under.png" id="3_vdb3k"]
[ext_resource type="AudioStream" uid="uid://dyi5lstxrfkdt" path="res://addons/ridiculous_coding/fireworks.wav" id="4_1o4lv"]
[ext_resource type="Texture2D" uid="uid://dqpxh1bccjaae" path="res://addons/ridiculous_coding/progress.png" id="4_y2kl4"]

[sub_resource type="Gradient" id="Gradient_v1eyn"]
offsets = PackedFloat32Array(0, 0.419689, 0.715026, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.979167, 1, 0.333333, 1, 1, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k0uh8"]
gradient = SubResource("Gradient_v1eyn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x4b51"]
lifetime_randomness = 0.29
spread = 20.0
initial_velocity_min = 400.0
initial_velocity_max = 400.0
gravity = Vector3(0, 300, 0)
scale_min = 5.0
scale_max = 6.0
color_ramp = SubResource("GradientTexture2D_k0uh8")

[node name="Ridiculous Coding Dock" type="Control"]
custom_minimum_size = Vector2(300, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwupq")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Ridiculous Coding" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="XP" type="VBoxContainer" parent="TabContainer/Ridiculous Coding"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Ridiculous Coding/XP"]
layout_mode = 2

[node name="xpLabel" type="Label" parent="TabContainer/Ridiculous Coding/XP/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "XP: 1143 / 1450"

[node name="levelLabel" type="Label" parent="TabContainer/Ridiculous Coding/XP/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 7"
horizontal_alignment = 2

[node name="ProgressBar" type="TextureProgressBar" parent="TabContainer/Ridiculous Coding/XP"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
max_value = 350.0
value = 43.0
nine_patch_stretch = true
texture_under = ExtResource("3_vdb3k")
texture_progress = ExtResource("4_y2kl4")

[node name="fire1" type="Control" parent="TabContainer/Ridiculous Coding/XP/ProgressBar"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="TabContainer/Ridiculous Coding/XP/ProgressBar/fire1"]
rotation = -0.785397
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_x4b51")

[node name="fire2" type="Control" parent="TabContainer/Ridiculous Coding/XP/ProgressBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="TabContainer/Ridiculous Coding/XP/ProgressBar/fire2"]
rotation = -2.35619
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_x4b51")

[node name="fireworksTimer" type="Timer" parent="TabContainer/Ridiculous Coding/XP/ProgressBar"]
wait_time = 3.0

[node name="sfxFireworks" type="AudioStreamPlayer" parent="TabContainer/Ridiculous Coding/XP/ProgressBar"]
stream = ExtResource("4_1o4lv")
volume_db = -12.0

[node name="HSeparator" type="HSeparator" parent="TabContainer/Ridiculous Coding"]
layout_mode = 2

[node name="goalsLabel" type="Label" parent="TabContainer/Ridiculous Coding"]
layout_mode = 2
text = "Goals:"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Ridiculous Coding"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TabContainer/Ridiculous Coding/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Ridiculous Coding/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GoalsVBoxContainer" type="VBoxContainer" parent="TabContainer/Ridiculous Coding/MarginContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddGoalButton" type="Button" parent="TabContainer/Ridiculous Coding"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Goal"

[node name="RC Options" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="GridContainer" type="GridContainer" parent="TabContainer/RC Options"]
layout_mode = 2
columns = 2

[node name="explosionCheckbox" type="CheckButton" parent="TabContainer/RC Options/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Explosions"

[node name="shakeCheckbox" type="CheckButton" parent="TabContainer/RC Options/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Shake"

[node name="blipCheckbox" type="CheckButton" parent="TabContainer/RC Options/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Blips"

[node name="charsCheckbox" type="CheckButton" parent="TabContainer/RC Options/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Keys"

[node name="soundCheckbox" type="CheckButton" parent="TabContainer/RC Options/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Sound"

[node name="fireworksCheckbox" type="CheckButton" parent="TabContainer/RC Options/GridContainer"]
layout_mode = 2
size_flags_horizontal = 11
button_pressed = true
text = "Fireworks"

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/RC Options"]
layout_mode = 2

[node name="resetButton" type="Button" parent="TabContainer/RC Options/CenterContainer"]
layout_mode = 2
text = "Reset"
